2008-06-17  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* gnome-modules.xml.in: Added gnome-specimen.

2008-06-17  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* gnome-modules.xml.in: Small formatting change in comment
	to unbreak indentation based folding in e.g. Vim.

2008-06-17  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* people.xml.in: Add myself.

2008-06-16  Claude Paroz  <claude@2xlibre.net>

	* teams.py:
	* templates/team.tmpl: Allow to show language summary stats even when
	there isn't a team in charge of the language.

2008-06-16  Claude Paroz  <claude@2xlibre.net>

	* teams.py:
	* templates/language-release.tmpl: Allow to show language stats even when
	there isn't a team in charge of the language.

2008-06-16  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: libbonono branched for 2.22.

2008-06-14  Gil Forcada  <gforcada@gnome.org>

	* templates/list-languages.tmpl:
	* templates/list-modules.tmpl:
	* templates/people.tmpl:
	Removed the hack to create a three columns to a css property.
	Fixes #534174.


2008-06-09  Gil Forcada  <gforcada@gnome.org>

	* templates/header.tmpl: Added javascript type, so it passes xhtml
	validation.

2008-06-04  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: libgnomeui branched for 2.22.

2008-06-02  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: xkeyboard-config is now a git module.

2008-05-30  Claude Paroz  <claude@2xlibre.net>

	* data/green-bar.png: Made green slightly lighter for color-impaired users.
	Fixes #535078.

2008-05-29  Claude Paroz  <claude@2xlibre.net>

	* update-stats.py: Use OptionParser, and add --force option to force
	regeneration of pots and pos.

2008-05-27  Claude Paroz  <claude@2xlibre.net>

	* releases.xml.in: Brasero translations in trunk again.

2008-05-27  Claude Paroz  <claude@2xlibre.net>

	* people.xml.in: Oups, typo in Fula leader id... 

2008-05-27  Claude Paroz  <claude@2xlibre.net>

	* people.xml.in: