@@ -1017,12 +1017,12 @@
         <domain id="po">
           <_description>UI translations</_description>
         </domain>
-				<!--
-				<document id="gst-boot">
+        <!--
+        <document id="gst-boot">
           <_description>GST Boot Setup Manual</_description>
           <directory>doc/boot</directory>
-				</document>
-				-->
+        </document>
+        -->
         <document id="gst-network">
           <_description>GST Network Setup Manual</_description>
           <directory>doc/network</directory>
@@ -1863,3 +1863,6 @@
     </branch>
   </module>
 </modules>
+
+<!-- Modeline for Vim, do not remove -->
+<!-- vim: set tabstop=2 shiftwidth=2 expandtab: -->
