@@ -1,5 +1,10 @@
 2008-06-17  Wouter Bolsterlee  <wbolster@svn.gnome.org>
 
+	* gnome-modules.xml.in: Fixup indentation and add a
+	Vim modeline so it won't happen again...
+
+2008-06-17  Wouter Bolsterlee  <wbolster@svn.gnome.org>
+
 	* gnome-modules.xml.in: Added gnome-specimen.
 
 2008-06-17  Wouter Bolsterlee  <wbolster@svn.gnome.org>
